--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,6 +18,7 @@
     "query-string": "^4.3.4",
     "quill": "^1.3.7",
     "quill-image-uploader": "^1.2.2",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-bootstrap-range-slider": "^3.0.2",
     "react-bootstrap-typeahead": "^5.2.0",
@@ -24,6 +26,8 @@
     "react-datepicker": "^4.1.1",
     "react-datepicker2": "^3.3.13",
     "react-dom": "^17.0.2",
+    "react-easy-crop": "^3.5.2",
+    "react-masonry-css": "^1.0.16",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
