--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-country-region-selector": "^3.1.0",
     "react-datepicker": "^4.1.1",
     "react-datepicker2": "^3.3.13",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-easy-crop": "^3.5.2",
     "react-masonry-css": "^1.0.16",
