--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "flux": "^4.0.1",
     "jalali-moment": "^3.3.10",
     "jquery": "^3.6.0",
+    "mdbreact": "^5.1.0",
     "moment": "^2.29.1",
     "moment-jalaali": "^0.9.1",
     "moment-timezone": "^0.5.33",
@@ -22,6 +23,7 @@
     "react": "^17.0.2",
     "react-bootstrap-range-slider": "^3.0.2",
     "react-bootstrap-typeahead": "^5.2.0",
+    "react-countdown-circle-timer": "^2.5.4",
     "react-country-region-selector": "^3.1.0",
     "react-datepicker": "^4.1.1",
     "react-datepicker2": "^3.3.13",
